# cmp-macro

./: Cargo.toml  README.md
examples/cmp/: Cargo.toml
examples/cmp/src/: main.rs
src/: lib.rs
